# IFDM

./: .gitignore  MANIFEST.md  Makefile  README.md  convergence_study.ipynb  optimization_study.ipynb  pyproject.toml
app/: __main__.py  dashboard.py  dryer.py  experiments.py  materials.py  model.py  optimize.py  plotting.py
dashboard/: __main__.py  app.py
dryer_core/: __main__.py  dryer.py  materials.py  model.py
