[project]
name = "inline-filament-dryer"
version = "0.1.0"
description = "Numerical model for inline filament dryer design"
requires-python = ">=3.11"
dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
    "streamlit",
    "plotly",
]
dev = [
    "ruff",
]

[project.scripts]
ifdm = "app.__main__:main"

[tool.poetry]
packages = [{include = "app"}]

[tool.setuptools.packages.find]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
