[project]
name = "inline-filament-dryer"
version = "0.2.0"
description = "Numerical model for inline filament dryer design"
requires-python = ">=3.11"
dependencies = [
    "numpy",
    "scipy",
    "streamlit",
    "plotly",
]

[project.optional-dependencies]
notebooks = [
    "matplotlib",
    "pandas",
    "dlib-bin",
]
dev = [
    "ruff",
]

[project.scripts]
ifdm = "app.__main__:main"

[tool.poetry]
packages = [{include = "app"}, {include = "dashboard"}]

[tool.setuptools.packages.find]
include = ["app", "dashboard"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
